Another text clean-up

--- a/2021-02-22-life-begins-at-40.org
+++ b/2021-02-22-life-begins-at-40.org
@@ -80,79 +80,92 @@ And that's why many people refer to it as middle essence middle-aged
 as middle essence. So although it's a strange subject to be talking
 about at the Royal Society I hope that it will do justice to these
 three figures here after whom the lecture is named. Let me take you
-back and some of you will remember this let me take you back to the
-late 1970s so an iconic sitcom television series on BBC the fallen
-rise of Reginald Perrin starring Leonard Rossiter and the television
-series was based on a novel by the English comic writer David nobs
-Reggie Perrin Reginald Isle Anthony Perrin our IP was 46 years old
+back and some of you will remember this. Let me take you back to the
+late 1970s so an iconic sitcom television series on BBC "The fallen
+rise of Reginald Perrin" starring Leonard Rossiter. The television
+series was based on a novel by the English comic writer David Nobs.
+Reggie Perrin. Reginald Isle Anthony Perrin. Our IP was 46 years old
 married to his wife Elizabeth living in a near Georgian house in the
-Surrey suburbs they had two children both growing up leaving their
-parents living in a house that was perhaps not quite well no longer a
+Surrey suburbs. They had two children both growing up leaving their
+parents living in a house that was perhaps not quite well. No longer a
 home Reggie commuted every weekday up to Waterloo station walked
 across the bridge went to work at sunshine deserts as a middle manager
-as a bureaucrat and at the start of the novel Reggie is depressed he's
-disillusioned and distressed disaffected disillusioned with his life
-disillusioned with his wife disillusioned with his work and he begins
-to behave rather randomly he starts sending off aggressive memos to
-his colleagues he tries to have an affair with his secretary he begins
-to get more irascible and one day while his his wife is out he decides
-that he's going to collect all his childhood mementos the memories of
-his youth and burn them as if he's trying to eradicate his past
-eradicate his identity Reggie decides that he can no longer live like
-this he decides there's only two ways he can either disappear in some
-way or he can kill himself so he drives a van down to a Dorset Beach
-takes off his clothes leaves them on the beach and walks out into the
-sea naked he doesn't drown himself he walks back up puts another set
-of clothes on so that he leaves his old clothes on the beach so people
-think that he's drowned himself puts on a new set of clothes puts on a
-week and takes on a new identity and he becomes eventually Martin well
-I don't want to tell you for those of you I mean some of you will
-remember the television series the book is fantastic in many many ways
-it takes place only over a week or two I don't want to give away the
-ending what I want to say is that what Reggie Peron was suffering from
-at the age of forty something was what we would now call and was
-indeed called then a midlife crisis a man usually a man not
-exclusively and in this period largely understood to be a male problem
-a man between the age of about 35 and 45 in that deadline decade
-realizing that his life was going nowhere disaffected and
+as a bureaucrat. And at the start of the novel Reggie is depressed.
+
+
+He's disillusioned and distressed. Disaffected disillusioned with his
+life, disillusioned with his wife, disillusioned with his work and he
+begins to behave rather randomly. He starts sending off aggressive
+memos to his colleagues. He tries to have an affair with his
+secretary. He begins to get more irascible and one day while his his
+wife is out he decides that he's going to collect all his childhood
+mementos the memories of his youth and burn them as if he's trying to
+eradicate his past, eradicate his identity.
+
+
+Reggie decides that he can no longer live like this. He decides
+there's only two ways he can either disappear in some way or he can
+kill himself. So he drives a van down to a Dorset Beach, takes off his
+clothes, leaves them on the beach and walks out into the sea naked. He
+doesn't drown himself. He walks back up puts another set of clothes
+on. So that he leaves his old clothes on the beach, so people think
+that he's drowned himself, puts on a new set of clothes puts on a week
+and takes on a new identity. And he becomes eventually Martin Well. I
+don't want to tell you, for those of you, I mean, some of you will
+remember the television series. The book is fantastic in many many
+ways. It takes place only over a week or two. I don't want to give
+away the ending. What I want to say is that what Reggie Peron was
+suffering from at the age of forty something was what we would now
+call and was indeed called then a midlife crisis. A man usually a man
+not exclusively and in this period largely understood to be a male
+problem. A man between the age of about 35 and 45 in that deadline
+decade realizing that his life was going nowhere disaffected and
 disillusioned would go off the rails the midlife crisis.
 
 Now the term had been first introduced about a decade earlier by a
-Canadian social scientists and psychoanalyst Elliot Jax Jax had come
-over from Toronto in the second world war had stayed he was one of the
-founding members of the Tavistock Institute for human relations he was
-social scientists but also psychoanalyst he'd been analyzed himself by
-Melanie Klein and had a practice as a psychoanalyst and what she
-described was pretty much what Reggie parind experienced and his point
-in death in the midlife crisis a short article published in 1965 he
-pointed out that the paradox is that of entering the prime of life the
-stage of fulfillment but at the same time the prime and fulfillment
-are dated death lies beyond so the picture that Jack's created was off
-this this man usually at the peak of a binomial curve of life and when
-you get to that peak all you can see is the downward curve to death
-and that's the moment when anxiety a depressive crisis was triggered
-he then went on to explain what happened to middle-aged men or what
-kind of behavior they began to exhibit and what he said was that in
-order to cover up this crisis they developed a set of manic behaviors
-to try and convince themselves that they were still young so the
-compulsive attempts to remain young the hypochondriacal concern over
-health and appearance the emergence of sexual promiscuity in order to
-prove youth and potency the hollowness lack of genuine enjoyment of
-life these he said are familiar patterns and they are all attempts at
-a race against time so the midlife man the man in the deadline decade
-sees death accelerating towards him and he tries to deny that or cover
-it up by claiming or pretending that he's younger than he is leading
-to these kinds of behaviors at the time both in the 60s and when
-Reggie Peron was having his crisis in the 70s there were two principal
-explanations for the midlife crisis the first was psychological the
-kind of analysis an explanation that Eliot Jack's put forward and that
-is that the midlife crisis was an identity crisis a crisis a
-depressive identity crisis very similar to the adolescent crisis the
-adolescent crisis he thought was a schizoid crisis the midlife crisis
-a depressive crisis hey axe was not the only person or certainly not
-the first person to think about the stages the critical phases of life
-in this way Carl Jung in the 1930s had written about his own crisis at
-the age of 37 and particularly Eric Erickson an American developmental
+Canadian social scientists and psychoanalyst Elliot Jax. Jax had come
+over from Toronto in the second world war had stayed. He was one of
+the founding members of the Tavistock Institute for human relations.
+He was social scientists but also psychoanalyst. He'd been analyzed
+himself by Melanie Klein and had a practice as a psychoanalyst. And
+what she described was pretty much what Reggie Perring experienced,
+and his point in death in the midlife crisis.
+
+A short article published in 1965. He pointed out that the paradox is
+that of entering the prime of life the stage of fulfillment but at the
+same time the prime and fulfillment are dated death lies beyond. So the
+picture that Jack's created was off this man usually at the peak
+of a binomial curve of life and when you get to that peak all you can
+see is the downward curve to death. And that's the moment when anxiety
+a depressive crisis was triggered. He then went on to explain what
+happened to middle-aged men or what kind of behavior they began to
+exhibit. And what he said was that in order to cover up this crisis
+they developed a set of manic behaviors to try and convince themselves
+that they were still young.
+
+
+
+So the compulsive attempts to remain young the hypochondriacal concern
+over health and appearance the emergence of sexual promiscuity in
+order to prove youth and potency the hollowness lack of genuine
+enjoyment of life. These he said are familiar patterns and they are
+all attempts at a race against time. So the midlife man, the man in
+the deadline decade sees death accelerating towards him and he tries
+to deny that or cover it up by claiming or pretending that he's
+younger than he is leading to these kinds of behaviors at the time
+both. In the 60s and when Reggie Perrin was having his crisis in the
+70s there were two principal explanations for the midlife crisis.
+
+The first was psychological the kind of analysis an explanation that
+Eliot Jack's put forward and that is that the midlife crisis was an
+identity crisis, a crisis, a depressive identity crisis, very similar
+to the adolescent crisis. The adolescent crisis, he thought, was a
+schizoid crisis. The midlife crisis, a depressive crisis, they was not
+the only person or certainly - not the first person to think about the
+stages, the critical phases of life in this way.
+
+Carl Jung in the 1930s had written about his own crisis at the age of
+37. And particularly Eric Erickson an American developmental
 psychologist had talked about life particularly in terms of the ages
 or the stages of he described life in terms of eight stages each of
 which had its own particular conflict the stage that correlated with
