Another text clean-up

--- a/2021-02-22-life-begins-at-40.org
+++ b/2021-02-22-life-begins-at-40.org
@@ -286,59 +286,65 @@ and 24. Men ideal age slightly later but not that much different.
 
 At the same time during the early decades of the 20th century it
 became more commonplace to have fewer children and to cluster them
-together earlier in the marriage so let's say a couple were married at
-the age of 20 or 21 by 24 or 25 they would have had their two or three
-children and they would be then bringing up those children the
+together earlier in the marriage. So let's say a couple were married
+at the age of 20 or 21 by 24 or 25 they would have had their two or
+three children and they would be then bringing up those children. The
 children would leave home so there was a much longer period of life
 after the childbearing period in a sense in this period still that was
 more important for women who tended to be in the workplace less by and
-large and looking after the children more men's rhythm the rhythm of
-men's life was slightly different dictated not so much by the rhythms
-of the family but by the rhythms of occupational patterns by the 1950s
-and 60s men tended to work for a fixed number of years often in the
-same job until retirement so you can see the male life course in some
-ways also socially prescribed from the moment of starting work to the
-moment of retirement set by the government by the state or by private
-industries one of the consequences of this this teasing out of the
-life course the the clustering of major life events in very similar
-ways across populations meant that people began to experience much
-more clearly defined stages and transitions in the life course so you
-could begin to identify a period of middle age between 30 and 50 40
-and 60 and we could begin to identify those critical stages of
-transition between those life phases now the point I want to make from
+large and looking after the children more men's rhythm.
+
+The rhythm of men's life was slightly different dictated not so much
+by the rhythms of the family but by the rhythms of occupational
+patterns by the 1950s and 60s men tended to work for a fixed number of
+years often in the same job until retirement. So you can see the male
+life course in some ways also socially prescribed from the moment of
+starting work to the moment of retirement set by the government by the
+state or by private industries. One of the consequences of this this
+teasing out of the life course the clustering of major life events
+in very similar ways across populations meant that people began to
+experience much more clearly defined stages and transitions in the
+life course.
+
+So you could begin to identify a period of middle age between 30 and
+50 40 and 60 and we could begin to identify those critical stages of
+transition between those life phases. Now the point I want to make from
 this is that there are a number of consequences that emerged from this
 modern standardized homogenized life course and they linked directly
-to the emergence of the midlife crisis the first impact was the growth
+to the emergence of the midlife crisis. The first impact was the growth
 of age anxiety or age consciousness if there were standard life
-courses standard milestones against which we could measure ourselves
-we became much more conscious or anxious about whether we succeeding
-or failing against those milestones so a much greater sense of where
+courses standard milestones against which we could measure ourselves.
+We became much more conscious or anxious about whether we succeeding
+or failing against those milestones. So a much greater sense of where
 we should be at certain points in our life and of course that
-expectation that we would leave home get married have children get a
-job retire our expectations were raised but at the same time if we
-didn't match up to those expectations if we didn't meet those
-milestones follow that timetable we could be dissatisfied with our
-achievements and this led the notion the phrase keeping up with the
-Joneses started in a comic strip in America about 1913 but it became
-in those early decades of the 20th century through the 30s and 40s a
-key way of us measuring ourselves against others a driver in some ways
-of envy and jealousy a driver of emulation a driver to increase our
-consumption to keep up with the journey the Joneses we were much more
-aware of our place in the world and particularly where we were failing
-while we were becoming more aware we were also becoming subject in
-this period two very different stresses this is the generation in the
-fifties and sixties 70s Reggie parents generation that could perhaps
-describe themselves as the first Sandwich Generation if we think about
-the patterns of marriage and child rearing and aging if you imagine
-that we have that couple ideally marrying at twenty have their
-children by twenty five by the time they're 40 45 Reggie parents age
-their children will be going through the troubled years of adolescence
-their parents would be aging through retirement needing more care and
-you find in this period the middle aged between the age of 30 and 50
-40 and 60 becoming sandwiched between the troubles of their adolescent
-children and the troubles of their parents so you hit the midlife
-crisis exactly when your children are going through an adolescent
-crisis.
+expectation that we would leave home, get married, have children, get a
+job retire.
+
+Our expectations were raised but at the same time if we didn't match
+up to those expectations. If we didn't meet those milestones follow
+that timetable we could be dissatisfied with our achievements and this
+led the notion the phrase. Keeping up with the Joneses started in a
+comic strip in America about 1913 but it became in those early decades
+of the 20th century through the 30s and 40s a key way of us measuring
+ourselves against others. A driver in some ways of envy and jealousy.
+A driver of emulation, a driver to increase our consumption to keep up
+with the journey the Joneses. We were much more aware of our place in
+the world and particularly where we were failing while we were
+becoming more aware.
+
+We were also becoming subject in this period two very different
+stresses this is the generation in the fifties and sixties 70s Reggie
+parents generation that could perhaps describe themselves as the first
+Sandwich Generation if we think about the patterns of marriage and
+child rearing and aging if you imagine that we have that couple
+ideally marrying at twenty have their children by twenty five by the
+time they're 40 45 Reggie parents age their children will be going
+through the troubled years of adolescence their parents would be aging
+through retirement needing more care and you find in this period the
+middle aged between the age of 30 and 50 40 and 60 becoming sandwiched
+between the troubles of their adolescent children and the troubles of
+their parents so you hit the midlife crisis exactly when your children
+are going through an adolescent crisis.
 
 
 Middle age was also challenged for many people by financial pressures
