--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1319,9 +1319,9 @@ tags: [book, template]
 
      Right now it is a right time to show several additional ones:
 
-      - assertIs();
-      - assertIsNotNone();
-      - assertNotEqual(); 
+      - assertIs() - identity assertion;
+      - assertIsNotNone() - not None assertion;
+      - assertNotEqual() - non equality assertion; 
      """
 
 
