--- a/2020-12-29-dissecting-python.org
+++ b/2020-12-29-dissecting-python.org
@@ -1346,7 +1346,38 @@ tags: [book, template]
 
      """Seems it is much elegant than before, but less self-explanatory"""
    #+END_SRC
-   
+
+** A statement concept introduction
+
+   #+NAME: equality_non_equality
+   #+BEGIN_SRC python :noweb yes :session second :tangle tests/test_05_statements_intro.py
+     """Lets meet equality and non equality operators"""
+
+     import unittest
+
+     """The program below is identical by its meaning to previous one, but
+     it written in a distinct manner with intention to introduce a
+     statement concept."""
+
+
+     class TestEqualityStatements(unittest.TestCase):
+
+         def test_equal_or_not_equal(self):
+             # equality operator is double =
+             self.assertTrue(True == True)
+             self.assertTrue(False == False)
+             self.assertTrue(None == None)
+             # non equality operator is !=
+             self.assertFalse(True != True)
+             self.assertFalse(False != False)
+             self.assertFalse(None != None)
+
+
+     """You might notice that in this case we assert the ~result~ of
+     statement evaluation. """
+   #+END_SRC
+
+
 *** Further exploration
 
 *** Zero, One and a Symbol
