A trivial text clean-up

--- a/2021-02-22-life-begins-at-40.org
+++ b/2021-02-22-life-begins-at-40.org
@@ -112,15 +112,17 @@ on. So that he leaves his old clothes on the beach, so people think
 that he's drowned himself, puts on a new set of clothes puts on a week
 and takes on a new identity. And he becomes eventually Martin Well. I
 don't want to tell you, for those of you, I mean, some of you will
-remember the television series. The book is fantastic in many many
-ways. It takes place only over a week or two. I don't want to give
-away the ending. What I want to say is that what Reggie Peron was
-suffering from at the age of forty something was what we would now
-call and was indeed called then a midlife crisis. A man usually a man
-not exclusively and in this period largely understood to be a male
-problem. A man between the age of about 35 and 45 in that deadline
-decade realizing that his life was going nowhere disaffected and
-disillusioned would go off the rails the midlife crisis.
+remember the television series.
+
+The book is fantastic in many many ways. It takes place only over a
+week or two. I don't want to give away the ending. What I want to say
+is that what Reggie Peron was suffering from at the age of forty
+something was what we would now call and was indeed called then a
+midlife crisis. A man usually a man not exclusively and in this period
+largely understood to be a male problem. A man between the age of
+about 35 and 45 in that deadline decade realizing that his life was
+going nowhere disaffected and disillusioned would go off the rails the
+midlife crisis.
 
 Now the term had been first introduced about a decade earlier by a
 Canadian social scientists and psychoanalyst Elliot Jax. Jax had come
@@ -167,111 +169,120 @@ stages, the critical phases of life in this way.
 Carl Jung in the 1930s had written about his own crisis at the age of
 37. And particularly Eric Erickson an American developmental
 psychologist had talked about life particularly in terms of the ages
-or the stages of he described life in terms of eight stages each of
-which had its own particular conflict the stage that correlated with
-the period that Jax was talking about he thought was focused on a
+or the stages of. He described life in terms of eight stages each of
+which had its own particular conflict. The stage that correlated with
+the period that Jax was talking about. He thought was focused on a
 conflict between creativity on the one hand and stagnation on the
-other and it was that that created the crisis so there were others as
-well thinking largely from a psycho analytical point of view about how
-we understood middle-age and midlife one of the important points to
-make about this kind of approach to middle age and midlife was.
+other. And it was that that created the crisis. So there were others
+as well thinking largely from a psycho analytical point of view about
+how we understood middle-age and midlife. One of the important points
+to make about this kind of approach to middle age and midlife was.
 
-That it was not just theoretical this wasn't just a theory of how we
-developed eating it was also incorporated into practice and
-psychoanalytical models of Aging became absolutely key to the work of
-marriage guidance counselors for example working for the national
+That it was not just theoretical. This wasn't just a theory of how we
+developed eating. It was also incorporated into practice and
+psychoanalytical models of aging, became absolutely key to the work of
+marriage guidance. Counselors for example working for the national
 marriage guidance council or couples therapist working at the
-Tavistock clinic for example most of that was built on an
+Tavistock clinic for example. Most of that was built on an
 understanding of individual development across the life course through
-the stages through middle age and through the various crisis points
-that they could produce so the first explanation for regi parents
-crisis is that he was suffering from some identity crisis around the
-age of forty forty-five but there were another set of explanations and
-these were biological the first biological explanation really revolved
-around some of the work that Peter Medawar was interested in old age
-natural death from the unsolved problem of biology he was interested
-particularly in the evolutionary and biological dimensions of Aging
-and in in that sense the downward curve of life was not necessarily
-only an awareness of approaching death it was something else it was an
-awareness that as we get older we get grayer or Balder all we develop
-middle-age spread or our muscle mass declines our vigor our vitality
-deteriorates and it was that sense of deteriorating vigor that fueled
-the cry in some kind of waste now it's not unrelated to the fear of
-death that Jax described but very much linked to that declining
-biological vitality that people wanted there was of course another way
-and there has been another way in which midlife crises have been
-linked to biology and that is particularly in women in relation to
-reproductive life and here the argument was and most of the literature
-certainly in this period was on men but there was some literature on
-women.
+the stages, through middle age and through the various crisis points
+that they could produce.
+
+So the first explanation for Reggie parents crisis is that he was
+suffering from some identity crisis around the age of forty
+forty-five. But there were another set of explanations and these were
+biological. The first biological explanation really revolved around
+some of the work that Peter Medawar was interested in old age. Natural
+death from the unsolved problem of biology he was interested
+particularly in the evolutionary and biological dimensions of Aging.
+And in in that sense the downward curve of life was not necessarily
+only an awareness of approaching death. It was something else it was
+an awareness that as we get older we get grayer or balder. All we
+develop middle-age spread or our muscle mass declines our vigor our
+vitality deteriorates and it was that sense of deteriorating vigor
+that fueled the cry in some kind of waste now. It's not unrelated to
+the fear of death that Jax described but very much linked to that
+declining biological vitality that people wanted.
+
+There was of course another way and there has been another way in
+which mid-life crises have been linked to biology. And that is
+particularly in women in relation to reproductive life and here the
+argument was and most of the literature certainly in this period was
+on men but there was some literature on women.
 
 
 In these cases women were understood to go through a crisis act
 through during after menopause as their reproductive functions
-supposedly disappeared or in some ways through the emptiness process
-so the a woman's midlife crisis which had tied very very clearly to
+supposedly disappeared or in some ways through the emptiness process.
+So the a woman's midlife crisis which had tied very very clearly to
 her reproductive capacity the term biological clock or the talkee the
-clock is ticking in fact was used by an American journalist Richard
+clock is ticking. In fact was used by an American journalist Richard
 Cohen in 1978 but the notion that in women their transitions and their
 crises might be governed by their biology or reduced to their biology
-was very commonplace the bats weren't surprised you to know that some
-men blamed their own midlife crises on the menopause their wife's
-menopause as well so let me go back to Reginald Perrin and reflect for
-a moment Reggie parry in the late 70s having a crisis trying to change
-his life in key ways recognizing that he perhaps hadn't achieved what
-he wanted and that he was disaffected and disillusioned we can see
-that pairing we could explain that in terms of his own psychological
-angst he's got to a stage an age in his life where everything looks as
-if it's going downhill and only death awaits we can also get a sense
-from his book that physically he's declining physically he no he no
-longer feels to be himself to be the man that he was so we could see
-it very much as an individual story of a man with psychological and
-biological problems what I want to suggest for the rest of the talk is
-that this is not the only way in which we can understand the midlife
-crisis in fact I want to zoom out to take it away from the individual
-and think about the social and cultural conditions that make the
-midlife crisis possible not only as a concept in the 60s 70s and 80s
-but also as a set of experience what happened to enable the midlife
-crisis to emerge not in an individual case but much more widely in
-terms of the socio-economic and the cultural conditions and I want to
-do that in two ways.
+was very commonplace. The bats weren't surprised you to know that some
+men blamed their own midlife crises on the menopause, their wife's
+menopause as well.
+
+So let me go back to Reginald Perrin and reflect for a moment Reggie
+Perrin in the late 70s having a crisis trying to change his life in
+key ways, recognizing that he perhaps hadn't achieved what he wanted
+and that he was disaffected and disillusioned. We can see that pairing
+we could explain that in terms of his own psychological angst he's got
+to a stage an age in his life where everything looks as if it's going
+downhill and only death awaits. We can also get a sense from his book
+that physically he's declining, physically he no he no longer feels to
+be himself to be the man that he was. So we could see it very much as
+an individual story of a man with psychological and biological
+problems what I want to suggest for the rest of the talk. Is that this
+is not the only way in which we can understand the midlife crisis. In
+fact I want to zoom out to take it away from the individual and think
+about the social and cultural conditions that make the midlife crisis
+possible not only as a concept in the 60s 70s and 80s but also as a
+set of experience what happened to enable the midlife crisis to emerge
+not in an individual case but much more widely in terms of the
+socio-economic and the cultural conditions and I want to do that in
+two ways.
 
 
 In the first instance I want to think about the standardized life
 course that emerged in the middle decades of the 20th century that
-created particular stresses on people at middle-age secondly I want to
-reflect on the meaning and the history of the phrase life begins at 40
-and at the end I want to argue that it's those two components that k2
-played a key role in the emergence of the midlife crisis not just
-Reggie parens but ours as well so let me start reflecting for a moment
-on the standardized life course there's no doubt of course that our
-life cycles individually and collectively are governed by our biology
-but Bernice no Garson was a very prominent psychologist in America who
-wrote extensively on middle-aged and midlife and the transitions
-between very life stages are various life stages and she pointed out
-of course that the timetable the milestones of life were not merely
-biological they were also also socially prescribed so there was a
-socially prescribed timetable she said for the ordering of major life
-events a time in the life span when men and women are expected to
-marry a time to raise children a time to retire so the rhythm of our
-life the stages of a laugh the ages of our life the transitions of our
-life was socially prescribed not just biological and of course if
-they're socially prescribed it means that they can change our
-understandings and experience can change our expectations can change
-our expectations of the life course the life course the life cycle did
-change dramatically across the early decades of the twenty century by
-the 1950s and 1960s couples were living longer if you were born at the
-end of 19th century early 20th century in this country we might expect
-to live until we were 14 50 60 by the 1950s 40s 50s we might expect to
-live until well into our 70s or perhaps eighties so life expectancy
-had increased giving us that longer life cycle and in principle also a
-longer period of adulthood or middle age at the same time we were
-marrying earlier by 19 in 1911 only about 24% of women were married by
-the age of 24 by the early 50s that had risen to 52% and in fact if
-you look at some of the surveys of men and women's attitudes about
-that the ideal age to marry is between 20 and 24 men ideal age
-slightly later but not that much different.
+created particular stresses on people at middle-age. Secondly I want
+to reflect on the meaning and the history of the phrase "life begins
+at 40". And at the end I want to argue that it's those two components
+that k2 played a key role in the emergence of the midlife crisis not
+just Reggie parens but ours as well.
 
+So let me start reflecting for a moment on the standardized life
+course. There's no doubt, of course, that our life cycles individually
+and collectively are governed by our biology. But Bernice no Garson
+was a very prominent psychologist in America who wrote extensively on
+middle-aged and midlife and the transitions between very life stages
+are various life stages. And she pointed out of course that the
+timetable, the milestones of life, were not merely biological they
+were also socially prescribed. So there was a socially prescribed
+timetable she said for the ordering of major life events. A time in the
+life span when men and women are expected to marry. A time to raise
+children, a time to retire. So the rhythm of our life the stages of a
+laugh the ages of our life. The transitions of our life was socially
+prescribed not just biological.
+
+And of course if they're socially prescribed. It means that they can
+change our understandings and experience can change our expectations,
+can change our expectations of the life course. The life course the
+life cycle did change dramatically across the early decades of the
+twenty century. By the 1950s and 1960s couples were living longer. If
+you were born at the end of 19th century early 20th century in this
+country we might expect to live until we were 40 50 60. By the 1950s
+40s 50s we might expect to live until well into our 70s or perhaps
+eighties. So life expectancy had increased giving us that longer life
+cycle and in principle also a longer period of adulthood or middle
+age.
+
+At the same time we were marrying earlier by 19 in 1911 only
+about 24% of women were married by the age of 24 by the early 50s that
+had risen to 52% and in fact if you look at some of the surveys of men
+and women's attitudes about that the ideal age to marry is between 20
+and 24. Men ideal age slightly later but not that much different.
 
 At the same time during the early decades of the 20th century it
 became more commonplace to have fewer children and to cluster them
